2000-01-10  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopyFtp.cc: check use-fxp for both sessions.
	* Makefile.am: remove FtpCopy.{cc,h}.
	* commands.cc: get rid of ftpcopy.

2000-01-09  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopyFtp.cc, FileCopyFtp.h: new files
	  (FXP implementation over FileCopy class).
	* CatJob.cc, CopyJob.cc, GetJob.cc, commands.cc, pgetJob.cc:
	  use FileCopy::New; update year.
	* DummyProto.cc, DummyProto.h, FileAccess.cc, FileAccess.h, FindJob.cc,
	  FtpDirList.cc, Http.cc, MirrorJob.cc, NetAccess.h, Resolver.cc,
	  SMTask.h, bookmark.cc, history.cc, lftp.cc, misc.cc, misc.h,
	  netrc.cc: update year.
	* FileCopy.cc, FileCopy.h: support for fxp; (New) new method;
	  (RateAdd) new method; (..Peer::CannotSeek) new method; (GetSession)
	  new method; (SetFXP) new method.
	* Makefile.am: add FileCopyFtp.{cc,h}.
	* buffer.h: (SetPos) new method.
	* ftpclass.cc: register FXP creator.
	* ftpclass.h: add FXP support methods.
	* resource.cc: new fxp resources (ftp:use-fxp, ftp:fxp-passive-source).

2000-01-08  Alexander V. Lukyanov  <lav@yars.free.net>

	* NetAccess.h, NetAccess.cc, ftpclass.cc, Http.cc: (SocketConnect,
	  SocketAddrLen) new methods; use them. This fixes a problem on NetBSD.

2000-01-07  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc, FileCopy.h: prepare for fxp; reuse session in New
	  if told so; don't request date many times.
	* ftpclass.cc, ftpclass.h: support STAT while doing fxp.
	* SMTask.h: (TimeoutS) new method.

2000-01-06  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc: include netinet/tcp.h conditionally.
	* FindJob.cc: #if 0 dead code.
	* Http.cc: send Last-Modified in STORE mode.
	* Resolver.cc: include arpa/nameser.h and resolv.h conditionally;
	  conditionally compile functions depending on HAVE_RES_SEARCH.
	* bookmark.cc: use / if HOME is not set.
	* history.cc: same.
	* lftp.cc: don't create ./.lftp if HOME is not set.
	* netrc.cc: fail if HOME is not set.
